added raiko